--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,33 @@
+# Application Configuration
 spring.application.name=My_Books_Editor
 server.port=31100
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3399/my_books_editor?createDatabaseIfNotExist=true
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/My_Books_Editor?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Jakarta Persistence JPA Configuration
+# JPA/Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
-# Logging for Hibernate
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework=OFF
+# Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+
+# Logging Configuration
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework=INFO
+logging.level.com.afci=DEBUG
+
+# Ajoutez ces lignes
+spring.jpa.properties.hibernate.discriminator.ignore_explicit_for_joined=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+file.upload-dir=src/main/resources/uploads/
+
