--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,63 @@
 # Application Configuration
 spring.application.name=My_Books_Editor
-server.port=31100
+server.port=8111
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/My_Books_Editor?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Configurez explicitement le dialecte MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
-
-# Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=20000
 
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=TRACE
+logging.level.org.hibernate=ERROR
 logging.level.org.springframework=INFO
 logging.level.com.afci=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.afci.security=TRACE
 
-# Ajoutez ces lignes
-spring.jpa.properties.hibernate.discriminator.ignore_explicit_for_joined=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Security Configuration
+spring.security.user.name=${ADMIN_USERNAME:admin}
+spring.security.user.password=${ADMIN_PASSWORD:secure_password}
 
-file.upload-dir=src/main/resources/uploads/
+# JWT Configuration
+jwt.secret=mySecretKey123456789012345678901234567890
+jwt.expiration=86400000  
+# 24 heures en millisecondes
 
+# File Upload Configuration
+file.upload-dir=${FILE_UPLOAD_DIR:src/main/resources/uploads/}
+
+# Email Configuration
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=sebastien.dugenest@gmail.com
+spring.mail.password=Liloueva060983.
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.from=${MAIL_FROM:no-reply@mybooks.com}
+
+# Frontend URL
+app.frontend-url=${FRONTEND_URL:http://localhost:8081}
+
+# Pagination Configuration
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=100
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.size-parameter=size
+
+# Additional Hibernate Properties
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
