--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,16 +38,16 @@ jwt.expiration=86400000
 # 24 heures en millisecondes
 
 # File Upload Configuration
-file.upload-dir=${FILE_UPLOAD_DIR:src/main/resources/uploads/}
+file.upload-dir=./uploads
 
 # Email Configuration
-spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${MAIL_PORT:587}
-spring.mail.username=sebastien.dugenest@gmail.com
-spring.mail.password=Liloueva060983.
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.from=${MAIL_FROM:no-reply@mybooks.com}
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=sebastien.dugenest@gmail.com
+# spring.mail.password=password
+# spring.mail.properties.mail.smtp.auth=false
+# spring.mail.properties.mail.smtp.starttls.enable=false
+# spring.mail.from=noreply@mybooks.com
 
 # Frontend URL
 app.frontend-url=${FRONTEND_URL:http://localhost:8081}
