--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,62 +2,45 @@
 spring.application.name=My_Books_Editor
 server.port=8111
 
-# Database Configuration
+# Database Configuration - MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/My_Books_Editor?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:root}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # JPA/Hibernate Configuration
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-
-# Configurez explicitement le dialecte MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
 # Logging Configuration
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.orm.jpa=DEBUG
-logging.level.org.springframework.transaction=TRACE
-logging.level.org.hibernate=ERROR
-logging.level.org.springframework=INFO
-logging.level.com.afci=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.afci.security=TRACE
+logging.level.org.hibernate=WARN
+logging.level.org.springframework=WARN
+logging.level.com.afci=INFO
+logging.level.org.springframework.security=WARN
 
 # Security Configuration
 spring.security.user.name=${ADMIN_USERNAME:admin}
 spring.security.user.password=${ADMIN_PASSWORD:secure_password}
 
 # JWT Configuration
-jwt.secret=mySecretKey123456789012345678901234567890
-jwt.expiration=86400000  
-# 24 heures en millisecondes
+jwt.secret=${JWT_SECRET:mySecretKey123456789012345678901234567890}
+jwt.expiration=86400000
 
 # File Upload Configuration
 file.upload-dir=./uploads
 
-# Email Configuration
-# spring.mail.host=smtp.gmail.com
-# spring.mail.port=587
-# spring.mail.username=sebastien.dugenest@gmail.com
-# spring.mail.password=password
-# spring.mail.properties.mail.smtp.auth=false
-# spring.mail.properties.mail.smtp.starttls.enable=false
-# spring.mail.from=noreply@mybooks.com
-
 # Frontend URL
-app.frontend-url=${FRONTEND_URL:http://localhost:8081}
+app.frontend-url=${FRONTEND_URL:http://localhost:8080}
 
 # Pagination Configuration
-spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.max-page-size=100
-spring.data.web.pageable.page-parameter=page
-spring.data.web.pageable.size-parameter=size
 
-# Additional Hibernate Properties
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# CORS Configuration
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8080}
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
